--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
 Aplikasi pakar  Penyakit anemia, source code berupa prototype dan masih banyak kekurangan.
-Source code tidak memiliki database karna gak sempet, dan tidak memiliki Assets karna akan terlalu rumit dan banyak effort
+Source code tidak memiliki Assets karna akan terlalu rumit dan banyak effort
 hanya untuk sejumlah prototype
 
 Nama: Fahrur Rohim
